--- a/css/geral.css
+++ b/css/geral.css
@@ -73,6 +73,7 @@ body {
   grid-gap: 20px;
   margin-bottom: 4rem;
 }
+
 .titulo {
   font-family: "Playfair Display SC", Georgia, "Times New Roman", Times, serif;
   font-size: 6rem;
@@ -81,6 +82,7 @@ body {
   margin-bottom: 1rem;
   grid-column: 1/4;
 }
+
 .animais h2 {
   font-family: monospace;
   font-size: 1.5rem;
@@ -200,8 +202,9 @@ body {
   .mapa {
     grid-column: 1/3;
   }
+
   .grid-section h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
   .menu {
     margin-top: 0px;
@@ -252,13 +255,23 @@ body {
 .js [data-anime="accordion"] dd {
   display: none;
 }
+
 [data-anime="accordion"] dt::after {
-  content: "⬎";
+  content: "";
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  background: url('../img/arrow-red.svg') no-repeat center center;
   margin-left: 10px;
+  transform: rotate(90deg);
+  transition: transform .3s;
 }
+
 [data-anime="accordion"] dt.ativo::after {
-  content: "⬏";
+  content: "";
+  transform: rotate(-90deg);
 }
+
 [data-anime="accordion"] dd.ativo {
   display: block;
   animation: slideDown 0.5s forwards;
@@ -307,4 +320,11 @@ body {
   padding: 0.2rem 0.5rem;
   font-weight: bold;
   border-radius: 2px;
+}
+
+.arrow-black{
+  background: url('../img/arrow-black.svg') no-repeat center center;
+  display: inline-block;
+  width: 8px;
+  height: 10px;
 }
